--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
        <title>Register Form</title>
 </head>
 <body>
-<form>
+<form><pre>
 Name       :<input type="text" placeholder="Name" name=" "></br>
 Password:<input type="password" placeholder="password" name=" "></br>
 Gender    :<input type="radio" name="gender">Male</br>
@@ -13,6 +13,7 @@ Email       :<input type="mail" placeholder="email" name=" "></br>
 Phone no:<input type="phone number" placeholder="98********"></br>
                  
    <input type="submit" value="submit" name=" ">
+</pre>
 </form>
 </body>
 </html>
